--- a/firstpage/css/style.css
+++ b/firstpage/css/style.css
@@ -36,11 +36,11 @@ footer{
   width: 100%;
 }
 
-a{
+nav a{
 
 text-decoration:none;
 color: grey;
 font-family: monospace;
-
-
+font-size: 30px;
+margin-left: 20px;
 }
