--- a/firstpage/css/style.css
+++ b/firstpage/css/style.css
@@ -3,6 +3,10 @@ width: 50%;
 margin-left: auto;
 margin-right: auto;
 }
+body{
+  font-family: 'Mansalva', cursive;
+}
+
 header{
 
 height: 100px;
@@ -10,6 +14,7 @@ width: 100%;
 background-image: url('../bilder/bild.jpeg');
 background-size: cover;
 background-position: 0px -100px;
+font-size: 50px;
 
 background-repeat: no-repeat;
 }
@@ -31,7 +36,7 @@ article{
 
 }
 aside{
-  background-color: #ffffff;
+  background-color: #777777;
   height: 200px;
   width: 30%;
 }
@@ -49,4 +54,36 @@ color: grey;
 font-family: monospace;
 font-size: 30px;
 margin-left: 20px;
+font-family: 'Mansalva', cursive;
+}
+
+
+@media screen and (max-width: 1000px) {
+  #wrapper {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  main {
+
+    flex-direction:column;
+    height: 400px;
+  }
+  aside{
+    width: 100%;
+
+  }
+  footer{
+    display: none;
+  }
+  nav a{
+    display:block;
+
+  }
+  nav{
+    height: auto;
+
+  }
+
 }
